# aiotto

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
apps/desktop/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auto_update.rs  backup.rs  bootstrap.rs  codex_app_server.rs  codex_home.rs  codex_session_usage.rs  desktop_window.rs  extension_inventory.rs  lib.rs  main.rs  project_memory.rs  system_notification.rs  thread_terminal.rs
src/: App.css  App.tsx  ShadcnApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: actionToast.tsx  actionToastTiming.ts  animatedIconButton.tsx  animatedLucide.tsx  states.tsx  tooltipLayout.ts  ui.tsx
src/components/page/: PageErrorBoundary.tsx  PageHeader.tsx  PageShell.tsx  PageState.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox-control.tsx  dialog.tsx  index.ts  input.tsx  number-field.tsx  page-surface.tsx  search-field.tsx  select.tsx  switch-control.tsx  tabs.tsx  tooltip.tsx  typography.tsx
src/contexts/: LanguageContext.tsx
src/design/: typography.ts
src/domain/: autoUpdate.ts  backupHistory.ts  backupRestoreWizard.ts  backupRetention.ts  backupSettings.ts  backups.ts  codexAppServer.ts  codexScan.ts  conversationContent.ts  conversationStage.ts  desktopWindow.ts  extensionHealth.ts  extensionInventory.ts  globalPreferences.ts  launchAtLogin.ts  mcpCatalog.ts  models.ts  notificationSettings.ts  operationLogger.ts  privacySecuritySettings.ts  projectMemory.ts  promptPresets.ts  skillsCatalog.ts  systemNotifications.ts  threadActions.ts  threadAnalytics.ts  threadDetails.ts  threadEnhancements.ts  threadGrouping.ts  threadIndexer.ts  threadLabels.ts  threadSearch.ts  threadTerminal.ts  threadTree.ts  usageStatistics.ts  workbenchToolbox.ts
src/features/statistics/: UsageDateRangePicker.tsx  UsageHero.tsx  UsagePricingPanel.tsx  UsageTrendChart.tsx  index.ts
src/features/threads/: Content.tsx  cache.ts  dialogs.tsx  hooks.ts  icons.tsx  index.ts  (+2 more)
src/hooks/: useBackups.ts  useExtensions.ts  useThreads.ts  useUsageStatistics.ts
src/pages/: Backup.tsx  RuntimeDiagnostics.tsx  ShadcnDashboard.tsx  ShadcnExtensions.tsx  ShadcnSettings.tsx  ShadcnThreads.tsx  ShadcnUsageStatistics.tsx
src/routes/: routeComponents.tsx  routeFeedback.tsx  routeLoaders.ts  routePreload.ts  routeRegistry.tsx  routeShell.tsx  routeSkeletons.tsx  routeTypes.ts  useRoutePrewarm.ts
src/runtime/: RuntimeInitializer.tsx  RuntimeProvider.tsx  eventLedger.ts  events.ts  queryClient.ts  runtimeKeys.ts  threadsRuntime.ts  usageStatisticsRuntime.ts
src/services/: backup.ts  extensions.ts  index.ts  settings.ts  threads.ts
src/styles/: themes.css
