[package]
name = "aiotto"
version = "0.1.2"
description = "Aiotto Community Edition"
authors = ["ShawnZhuge"]
license = "Apache-2.0"
repository = "https://github.com/ShawnZhuge/aiotto"
edition = "2024"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aiotto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
filetime = "0.2"
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
ureq = { version = "2.12", default-features = true, features = ["json"] }
tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2.5"
window-vibrancy = "0.7"
toml_edit = "0.25.12"

[profile.release]
strip = "symbols"
debug = 0
split-debuginfo = "off"
